Integ test case for concurrent search
Signed-off-by: Varun Jain <varunudr@amazon.com>